%% title: ERD 05b2 - Approval Step Status / Log / Reminder
%% Module: Approval workflow engine, execution/audit trail (part 4 of 4, see erd-05b1 for Flow/FlowStep/Approval)

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmApprovalStepStatus {
        UUID id
        UUID approval_id
        UUID step_id
        ApprovalStatus status
        string approver
        string approver_name
        timestamp approval_date
        string comment
        string signature_url
        string ip_address
        string user_agent
        boolean is_completed
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmApprovalLog {
        UUID id
        UUID approval_id
        UUID step_status_id
        string action
        string actor
        string actor_name
        string comment
        ApprovalStatus old_status
        ApprovalStatus new_status
        string ip_address
        string user_agent
        json extra_data
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmApprovalReminder {
        UUID id
        UUID approval_id
        UUID step_status_id
        string reminder_type
        timestamp sent_at
        string recipient
        string recipient_email
        string channel
        string message
        boolean is_read
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmApprovalStepStatus |o--o{ PmApprovalLog : "logs for"

    PmApprovalStepStatus |o--o{ PmApprovalReminder : "reminders for"
